like system and so on

--- a/src/assests/scss/variables.scss
+++ b/src/assests/scss/variables.scss
@@ -6,6 +6,7 @@
     --color-light: #FFFFFF;
     --color-input: #F8F8F8;
     --color-explosive-grey: #C4C4C4;
+    --color-titanium-white: #E4E4E4;
 
     --font-primary: "Open Sans", "Arial", sans-serif;
 }
