--- a/src/assests/scss/variables.scss
+++ b/src/assests/scss/variables.scss
@@ -7,6 +7,7 @@
     --color-input: #F8F8F8;
     --color-explosive-grey: #C4C4C4;
     --color-titanium-white: #E4E4E4;
+    --color-bright-saffron: #FFCB08;
 
     --font-primary: "Open Sans", "Arial", sans-serif;
 }
